--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "netfliex study cloning",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon babel-node init.js --delay 2"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,14 @@
   "homepage": "https://github.com/jeongmingi123/netflex#readme",
   "dependencies": {
     "@babel/node": "^7.12.1",
-    "express": "^4.17.1"
-  },
-  "scripts": {
-    "start": "nodemon babel-node index.js --delay 2"
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "helmet": "^4.1.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
-  }
+  },
+  "type": "module"
 }
