--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@babel/node": "^7.12.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "github": "^14.0.0",
     "helmet": "^4.1.1",
+    "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "pug": "^3.0.0"
   },
