--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
     "body-parser": "^1.19.0",
     "bootloader": "^1.0.1",
     "cookie-parser": "^1.4.5",
-
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.15.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "github": "^14.0.0",
     "helmet": "^4.1.1",
     "mini-css-extract-plugin": "^1.2.1",
-    "github": "^14.0.0",
     "mongoose": "^5.10.14",
-
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "postcss": "^8.1.4",
     "postcss-loader": "^4.0.4",
     "pug": "^3.0.0",
     "sass": "^1.29.0",
-    "sass-loader": "^10.0.5",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "node-sass": "^5.0.0",
+    "nodemon": "^2.0.6",
+    "sass-loader": "^10.1.0"
   }
 }
